--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <ul class="list-unstyled contact-list">
                     <li class="email"><i class="fa fa-envelope"></i><a href="mailto: stepanow@bk.ru">stepanow@bk.ru</a></li>
                     <li class="phone"><i class="fa fa-phone"></i><a href="tel:+7(961) 999 5108">+7(961) 999 5108</a></li>
-                    <li class="website"><i class="fa fa-globe"></i><a href="http://leonid-stepanov.site" target="_blank">leonid-stepanov.site</a></li>
+                    <li class="website"><i class="fa fa-globe"></i><a href="https://leonid-alt.github.io" target="_blank">leonid-stepanov.site</a></li>
                     <!-- <li class="linkedin"><i class="fa fa-linkedin"></i><a href="#" target="_blank">linkedin.com/in/leostep</a></li> -->
                     <li class="github"><i class="fa fa-github"></i><a href="https://github.com/leonid-alt" target="_blank">github.com/leonid-alt</a></li> 
                     <!-- <li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/_themes" target="_blank">@twittername</a></li> -->
