--- a/index.html
+++ b/index.html
@@ -202,6 +202,11 @@
             <div class="interests-container container-block">
                 <h2 class="container-block-title">Interests</h2>
                 <ul class="list-unstyled interests-list">
+
+                    <li>Зrogramming</li>
+                    <video muted="muted" controls="controls" src="shares/video/VID-20211215-WA0000.mp4">
+                    </video><br><br>
+
                     <li>Skiing</li>
                     <video muted="muted" controls="controls" src="shares/video/OVBS6578.mp4">
                     </video><br><br>
@@ -546,7 +551,7 @@
     <footer class="footer">
         <div class="text-center">
                 <!--/*   */-->
-                <small class="copyright">Copyright <i class="fa fa-copyright" aria-hidden="true"></i> Leonid N. Stepanov 2020</small>
+                <small class="copyright">Copyright <i class="fa fa-copyright" aria-hidden="true"></i> Leonid N. Stepanov 2022</small>
         </div><!--//container-->
     </footer><!--//footer-->
  
