--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 <h2 class="container-block-title">Interests</h2>
                 <ul class="list-unstyled interests-list">
 
-                    <li>Зrogramming</li>
+                    <li>Programming</li>
                     <video muted="muted" controls="controls" src="shares/video/VID-20211215-WA0000.mp4">
                     </video><br><br>
 
