--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <div class="time">2007 - 2021</div>
                 </div><!--//item-->
                 <div class="item">
-                    <h4 class="degree"><a href="https://www.altstu.ru/" target="_blank">Altai State Technical University named after I.I. Polzunova</a></h4>
+                    <h4 class="degree"><a href="https://www.altstu.ru/" target="_blank">Altai State Technical University named after I.I. Polzunov</a></h4>
                     <h5 class="meta">University of Barnaul</h5>
                     <div class="time">1976 - 1981</div>
                 </div><!--//item-->
