--- a/index.html
+++ b/index.html
@@ -130,8 +130,13 @@
 
         <li class="nav-item">
             <a class="nav-link" href="#Skills_&_Proficienc">
-              <i class="fa fa-rocket" aria-hidden="true"></i>  
+              <i class="fa fa-rocket" aria-hidden="true"></i>
               SKILLS & PROFICIENCY</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="../Resume/dop/index.html" target="_blank">
+                  <i class="fa fa-graduation-cap" aria-hidden="true"></i>
+                  ADD Inform</a>
           </li>
       </ul>
     </div>
