--- a/dop/app_development.html
+++ b/dop/app_development.html
@@ -142,7 +142,7 @@
 
 
             </div>
-             <a href="index.html" class="button-back">&larr;Вернуться на главную</a>
+             <a href="index_1.html" class="button-back">&larr;Вернуться на главную</a>
 
         </div>
     </div>
@@ -205,7 +205,7 @@
 
 
             </div>
-             <a href="index.html" class="button-back">&larr;Вернуться на главную</a>
+             <a href="index_1.html" class="button-back">&larr;Вернуться на главную</a>
 
         </div>
     </div>
