--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               SKILLS & PROFICIENCY</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="../Resume/dop/index.html" target="_blank">
+              <a class="nav-link" href="dop/index_1.html" target="_blank">
                   <i class="fa fa-graduation-cap" aria-hidden="true"></i>
                   ADD Inform</a>
           </li>
