--- a/dop/3D_modeling.html
+++ b/dop/3D_modeling.html
@@ -116,7 +116,7 @@
 
   <div class="container">
 
-    <a href="index.html" class="button-back">&larr;Вернуться на главную</a>
+    <a href="index_1.html" class="button-back">&larr;Вернуться на главную</a>
 
             <div class="header__title">
 
@@ -384,7 +384,7 @@
     <!-- // Работа в портфолио -->  
 
           </div>
-        <a href="index.html" class="button-back">&larr;Вернуться на главную</a>
+        <a href="index_1.html" class="button-back">&larr;Вернуться на главную</a>
     </div>
     
 </div>
