--- a/dop/certificats.html
+++ b/dop/certificats.html
@@ -116,7 +116,7 @@
             </div>
             <!-- // Работа в портфолио -->
 
-             <a href="index.html" class="button-back">&larr;Вернуться на главную</a>
+             <a href="index_1.html" class="button-back">&larr;Вернуться на главную</a>
 
             <!-- Ряд шевронов навигации -->
             <div class="row">
@@ -126,7 +126,7 @@
                     </div>
                 </div>
                 <div class="col-4">
-                    <a href="index.html">
+                    <a href="index_1.html">
                     <div class="scroll"> 
                         <i class="fa fa-chevron-up" aria-hidden="true" alt="Шеврон вверх" title="Прокрутка экрана вверх"></i>
                     </div>
