--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <li class="nav-item">
               <a class="nav-link" href="dop/index_1.html" target="_blank">
                   <i class="fa fa-graduation-cap" aria-hidden="true"></i>
-                  ADD Inform</a>
+                  ADDITIONAL INFORMATION</a>
           </li>
       </ul>
     </div>
