--- a/dop/index_1.html
+++ b/dop/index_1.html
@@ -133,7 +133,7 @@
         <div class="button-header" target="_blanc">
                 <div class="header__title">Инженер-разработчик<br>СТЕПАНОВ ЛЕОНИД НИКОЛАЕВИЧ
                     <div class="header__slogan"><br>Проектирование радиоэлектронных систем,<br>
-                        программирование информационных систем,<br>управление проектами.<br><br>тел.: +7(961) 999-5108
+                        программирование информационных систем,<br>управление проектами.
         
                     </div>
                 </div>
