--- a/index.html
+++ b/index.html
@@ -136,7 +136,13 @@
           <li class="nav-item">
               <a class="nav-link" href="dop/index_1.html" target="_blank">
                   <i class="fa fa-graduation-cap" aria-hidden="true"></i>
-                  ADDITIONAL INFORMATION</a>
+                  ADD INFORM</a>
+          </li>
+
+          <li class="nav-item">
+              <a class="nav-link" href="psd_to_html/index_2.html" target="_blank">
+                  <i class="fa fa-binoculars" aria-hidden="true"></i>
+                  TRAVEL</a>
           </li>
       </ul>
     </div>
@@ -215,12 +221,11 @@
                     <li>Skiing</li>
                     <video muted="muted" controls="controls" src="shares/video/OVBS6578.mp4">
                     </video><br><br>
-                    <!-- <li>Hang Gliding</li> -->
-                    <li>Fishing</li>
 
-                    
-                        <img src="shares/images/fishing.jpg" alt="fishing">
-                    
+                    <li>Fishing</li>
+                    <video muted="muted" controls="controls" src="shares/video/katun.mp4">
+                    </video><br><br>
+                    <!-- <li>Hang Gliding</li> -->
 
                 </ul>
             </div><!--//interests-->
