--- a/psd_to_html/index_2.html
+++ b/psd_to_html/index_2.html
@@ -229,8 +229,8 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="heading text-center">
-                        <h3><b>MAKE AMAZING WEBSITE</b></h3>
-                        <h3>Watch our Tutorials</h3>
+                        <h3><b>BE AWARE OF THE EVENTS OF TOURIST ALTAI</b></h3>
+                        <h3>Keep your finger on the pulse</h3>
                         <br><br><br> 
                         
                     </div>
