--- a/psd_to_html/index_2.html
+++ b/psd_to_html/index_2.html
@@ -96,9 +96,9 @@
             <div class="row">
                 <div class="col-sm-6 col-md-6"> 
                     <div class="mobile-app-banner-content wow bounceInUp">
-                        <h1>Beautify <br>
-                            Landing page kit <br>
-                            for startup</h1>
+                        <h1>Journeys <br>
+                            through the fabulous <br>
+                            mountain Altai</h1>
                        <p>
                            Excepteur sint occaecat cupidatat non proident suntin culpa qui officia deserunt mollit lorem ipsum animid est laborum perspiciatis unde.
                            
