--- a/psd_to_html/index_2.html
+++ b/psd_to_html/index_2.html
@@ -1611,7 +1611,7 @@
                 var marker = new google.maps.Marker({
                     position: new google.maps.LatLng(51.608897, 85.800575),
                     map: map,
-                    title: 'Snazzy!'
+                    title: 'Altay Sense!'
                 });
             }
         </script>
