--- a/psd_to_html/index_2.html
+++ b/psd_to_html/index_2.html
@@ -98,7 +98,7 @@
                     <div class="mobile-app-banner-content wow bounceInUp">
                         <h1>Journeys <br>
                             through the fabulous <br>
-                            mountain Altai</h1>
+                            mountain Altay</h1>
                        <p>
                            Excepteur sint occaecat cupidatat non proident suntin culpa qui officia deserunt mollit lorem ipsum animid est laborum perspiciatis unde.
                            
