--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
               SKILLS & PROFICIENCY</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="dop/index_1.html" target="_blank">
+              <a class="nav-link" href="addition/index_1.html" target="_blank">
                   <i class="fa fa-graduation-cap" aria-hidden="true"></i>
                   ADD INFORM</a>
           </li>
 
           <li class="nav-item">
-              <a class="nav-link" href="psd_to_html/index_2.html" target="_blank">
+              <a class="nav-link" href="travel/index_2.html" target="_blank">
                   <i class="fa fa-binoculars" aria-hidden="true"></i>
                   TRAVEL</a>
           </li>
