--- a/travel/index_2.html
+++ b/travel/index_2.html
@@ -616,6 +616,7 @@
                         <li><a href="#service-tab-2">Optimization</a></li>
                         <li><a href="#service-tab-3">Web Design</a></li>
                         <li><a href="#service-tab-4">Development</a></li>
+                        <li><a href="#service-tab-5">Web Testing</a></li>
                     </ul>
 <br>  
                     <!-- Service Tab 01 -->
@@ -697,7 +698,7 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <img src="img/a5.jpg" alt="development">
+                                    <img src="img/a4.jpg" alt="development">
                                 </div>
                                 <div class="col-md-6">
                                     <div class="tab-bg">
@@ -708,6 +709,32 @@
                                         </p>
 
                                         <div id="services-02-btn-04">
+                                            <a class="btn btn-general btn-yellow" href="#services" title="Get In Touch" role="button">Get In Touch</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <!-- Service Tab 05 -->
+                    <div id="service-tab-5" class="service-tab">
+
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <img src="img/a5.jpg" alt="development">
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="tab-bg">
+                                        <h2>05</h2>
+                                        <h3>Testing in Web</h3>
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem perferendis quod debitis ab sed sapiente. Ducimus tempore, doloremque asperiores natus reprehenderit dignissimos beatae molestias tenetur cupiditate architecto culpa quibusdam velit magnam sapiente accusantium, repellat earum!
+                                        </p>
+
+                                        <div id="services-02-btn-05">
                                             <a class="btn btn-general btn-yellow" href="#services" title="Get In Touch" role="button">Get In Touch</a>
                                         </div>
                                     </div>
