--- a/travel/index_2.html
+++ b/travel/index_2.html
@@ -623,27 +623,28 @@
                     <div id="service-tab-1" class="service-tab">
 
                         <div class="container">
-                            <div class="row wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">
-                                <div class="col-md-6">
-                                    <img src="img/a1.jpg" alt="creativity">
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="tab-bg">
-                                        <h2>01</h2>
-                                        <h3>When Creativity Matters in life</h3>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem perferendis quod debitis ab sed sapiente. Ducimus tempore, doloremque asperiores natus reprehenderit dignissimos beatae molestias tenetur cupiditate architecto culpa quibusdam velit magnam sapiente accusantium, repellat earum!</p>
+                            <div class="row">
+                                <!-- <div class="row wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s"> -->
+                                   <div class="col-md-6">
+                                       <img src="img/a1.jpg" alt="creativity">
+                                   </div>
+                                   <div class="col-md-6">
+                                       <div class="tab-bg">
+                                           <h2>01</h2>
+                                           <h3>When Creativity Matters in life</h3>
+                                           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem perferendis quod debitis ab sed sapiente. Ducimus tempore, doloremque asperiores natus reprehenderit dignissimos beatae molestias tenetur cupiditate architecto culpa quibusdam velit magnam sapiente accusantium, repellat earum!</p>
 
-                                        <div id="services-02-btn-01">
-                                            <a class="btn btn-general btn-yellow" href="#services" title="Get In Touch" role="button">Get In Touch</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                                           <div id="services-02-btn-01">
+                                               <a class="btn btn-general btn-yellow" href="#services" title="Get In Touch" role="button">Get In Touch</a>
+                                           </div>
+                                       </div>
+                                   </div>
+                               </div>
+                           </div>
 
-                    </div>
+                       </div>
 
-                    <!-- Service Tab 02 -->
+                       <!-- Service Tab 02 -->
                     <div id="service-tab-2" class="service-tab">
 
                         <div class="container">
