--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <li class="nav-item active">
           <a class="nav-link" href="#Career_Profile">
               <i class="fa fa-user" aria-hidden="true"></i>  
-            CAREER PROFILE <span class="sr-only">(current)</span></a>
+            CAREER<span class="sr-only">(current)</span></a>
         </li>
   
         <li class="nav-item">
@@ -134,16 +134,24 @@
               SKILLS & PROFICIENCY</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="addition/index_1.html" target="_blank">
+              <a class="nav-link" href="addition/index_addition.html" target="_blank">
                   <i class="fa fa-graduation-cap" aria-hidden="true"></i>
-                  ADD INFORM</a>
+                  ADD INFO</a>
           </li>
 
           <li class="nav-item">
-              <a class="nav-link" href="travel/index_2.html" target="_blank">
+              <a class="nav-link" href="travel/index_travel.html" target="_blank">
                   <i class="fa fa-binoculars" aria-hidden="true"></i>
                   TRAVEL</a>
           </li>
+
+          <li class="nav-item">
+              <a class="nav-link" href="shop/index_shop.html" target="_blank">
+                  <i class="fa fa-coffee" aria-hidden="true"></i>
+                  SHOP</a>
+          </li>
+
+
       </ul>
     </div>
     </nav>
@@ -485,7 +493,7 @@
                 </div><!--//item-->
                 <div class="item">
                     <span class="project-title"><a href="https://github.com/leonid-alt/CarBook/" target="_blank">CarBook</a></span> - 
-                    <span class="project-tagline">A computer vision application project for a Cubiebord4 single-board computer with the Lubuntu operating system in C, using the OpenCV v.2.4.9 library. </span>
+                    <span class="project-tagline">A computer vision application project for a Cubieboard4 single-board computer with the Lubuntu operating system in C, using the OpenCV v.2.4.9 library. </span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="project-title"><a href="https://github.com/leonid-alt/gitApp_Intuit/" target="_blank">App_Intuit</a></span> - 
