--- a/shop/index_shop.html
+++ b/shop/index_shop.html
@@ -103,16 +103,16 @@
     </div>
 	<div class="box-main-wrapper">
 	<div id="1b" class="bgcolor-1 box-main">
-	<div class="pizza-img-box">
-		<div class="pizza-img-box-inner">
-		<img class="left" src="images/pizza.png">
+	<div class="salat-img-box">
+		<div class="salat-img-box-inner">
+		<img class="left" src="images/salat.png">
 		</div>
 	</div>
 	</div>
 	<div id="2b" class="bgcolor-2 box-main">
-	<div class="pizza-img-box">
-		<div class="pizza-img-box-inner">
-		<img class="right" src="images/pizza-right.png">
+	<div class="salat-img-box">
+		<div class="salat-img-box-inner">
+		<img class="right" src="images/salat-right.png">
 		</div>
 	</div>
 	</div>
