--- a/shop/index_shop.html
+++ b/shop/index_shop.html
@@ -22,7 +22,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <nav class="navbar navbar-expand-lg navbar-light navigationbar">
-                        <a class="navbar-brand" href="#" style="width:200px;"><img src="images/logo_3.png" alt="logo"></a>
+                        <a class="navbar-brand" href="#" style="width:200px;"><img src="images/logo.png" alt="logo"></a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                         <span class="navbar-toggler-icon">
                             <span class="icon-bar"></span>
