--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
           </li>
 
           <li class="nav-item">
-              <a class="nav-link" href="shop/index_shop.html" target="_blank">
-                  <i class="fa fa-coffee" aria-hidden="true"></i>
-                  SHOP</a>
+              <a class="nav-link" href="shop/index_food.html" target="_blank">
+                  <i class="fa fa-cutlery" aria-hidden="true"></i>
+                  FOOD</a>
           </li>
 
 
