--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           </li>
 
           <li class="nav-item">
-              <a class="nav-link" href="shop/index_food.html" target="_blank">
+              <a class="nav-link" href="food/index_food.html" target="_blank">
                   <i class="fa fa-cutlery" aria-hidden="true"></i>
                   FOOD</a>
           </li>
@@ -186,7 +186,7 @@
                     <div class="time">2007 - 2021</div>
                 </div><!--//item-->
                 <div class="item">
-                    <h4 class="degree"><a href="https://www.altstu.ru/" target="_blank">Altai State Technical University named after I.I. Polzunov</a></h4>
+                    <h4 class="degree"><a href="https://www.altstu.ru/" target="_blank">Altay State Technical University named after I.I. Polzunov</a></h4>
                     <h5 class="meta">University of Barnaul</h5>
                     <div class="time">1976 - 1981</div>
                 </div><!--//item-->
@@ -204,7 +204,7 @@
                 <div class="time">2020</div>
                 </div><!--//item-->
                 <div class="item">
-                    <h4 class="degree"><a href="https://intuit.ru/verifydiplomas/101185965" target="_blank">"Java: Basics"</a></h4>
+                    <h4 class="degree"><a href="https://intuit.ru/verifydiplomas/101185965" target="_blank">Java: Basics</a></h4>
                     <h5 class="meta">The National Open University "INTUIT"</h5>
                     <div class="time">2018</div>
                 </div><!--//item-->
