--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
 
                             <br>Designing Hyperbolic Regular Aggregates in SolidWorks.<br>
                              Development and implementation of device-based vision system "National Instruments" 
-                             <a href="https://www.ni.com/en-us/support/model.isc-1722.html" target="_blank">(smart camera ISC 1722).</a>
+                             <a href="https://www.ni.com/ru-ru/support/model.isc-1722.html" target="_blank">(smart camera ISC 1722).</a>
                          
                     </div><!--//details-->
                 </div><!--//item-->
