--- a/index.html
+++ b/index.html
@@ -215,6 +215,11 @@
             <div class="education-container container-block">
                 <h2 class="container-block-title">Certificates</h2>
                 <div class="item">
+                    <h4 class="degree"><a href="https://intuit.ru/verifydiplomas/101547854" target="_blank">The Software Testing Basics</a></h4>
+                    <h5 class="meta">The National Open University "INTUIT"</h5>
+                    <div class="time">2022</div>
+                </div><!--//item-->
+                <div class="item">
                     <h4 class="degree"><a href="https://www.brainbench.com/xml/bb/transcript/public/viewtranscript.xml?pid=6726887" target="_blank">Apple iOS 7 Development</a></h4>
                     <h5 class="meta">Brainbench Inc.</h5>
                 <div class="time">2020</div>
@@ -229,6 +234,7 @@
                     <h5 class="meta">The National Open University "INTUIT"</h5>
                     <div class="time">2018</div>
                 </div><!--//item-->
+
             </div><!--//education-container-->
             <div class="languages-container container-block">
                 <h2 class="container-block-title">Languages</h2>
