--- a/index.html
+++ b/index.html
@@ -202,6 +202,11 @@
             <div class="education-container container-block">
                 <h2 class="container-block-title">Education</h2>
                 <div class="item">
+                    <h4 class="degree"><a href="https://tgu-dpo.ru/" target="_blank">The National Research Tomsk State University</a></h4>
+                    <h5 class="meta">University of Tomsk</h5>
+                    <div class="time">2022</div>
+                </div><!--//item-->
+                <div class="item">
                     <h4 class="degree"><a href="https://intuit.ru/" target="_blank">The National Open University "INTUIT"</a></h4>
                     <h5 class="meta">University of Moscow</h5>
                     <div class="time">2007 - 2021</div>
