--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                 <div class="item">
                     <h4 class="degree"><a href="https://intuit.ru/" target="_blank">The National Open University "INTUIT"</a></h4>
                     <h5 class="meta">University of Moscow</h5>
-                    <div class="time">2007 - 2021</div>
+                    <div class="time">2007 - 2022</div>
                 </div><!--//item-->
                 <div class="item">
                     <h4 class="degree"><a href="https://www.altstu.ru/" target="_blank">Altay State Technical University named after I.I. Polzunov</a></h4>
@@ -354,10 +354,33 @@
                 <p><a id="Experiences"></a></p> 
                 <h2 class="section-title"><i class="fa fa-briefcase"></i>Experiences </h2>
 
+
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Software Enginee</h3>
+                            <h3 class="job-title">Quality Assurance (QA) Engineer</h3>
+                            <div class="time">2022</div>
+                        </div><!--//upper-row-->
+                        <div class="company"><a href="https://new-step.study" target="_blank">National Research Tomsk State University & Training Center "New Step" Ltd., Skolkovo</a></div>
+                    </div><!--//meta-->
+                    <div class="details">
+                        <!-- <div class="container"> -->
+                        <div class="image__wrapper">
+                            <img src="shares/images/DIPLOM_TPO_1200_849.jpg" class="minimized" alt="diplom">
+                        </div>
+                        <!-- </div> -->
+
+                        <br>Development of automated software testing systems using "Postman", "Soap UI" and "Selenium" packages.<br>
+
+                    </div><!--//details-->
+                </div><!--//item-->
+
+
+
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Software Engineer</h3>
                             <div class="time">2016 - Present</div>
                         </div><!--//upper-row-->
                         <div class="company">Freelance, Barnaul</div>
@@ -373,7 +396,7 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Design engineer</h3>
+                            <h3 class="job-title">Design Engineer</h3>
                             <div class="time">2012 - 2016</div>
                         </div><!--//upper-row-->
                         <div class="company"><a href="http://apzrotor.ru/" target="_blank">Rotor, Barnaul</a></div>
