Training Center at BMST

--- a/index.html
+++ b/index.html
@@ -224,16 +224,26 @@
                     <h5 class="meta">The National Open University "INTUIT"</h5>
                     <div class="time">2022</div>
                 </div><!--//item-->
+                <!--
                 <div class="item">
                     <h4 class="degree"><a href="https://www.brainbench.com/xml/bb/transcript/public/viewtranscript.xml?pid=6726887" target="_blank">Apple iOS 7 Development</a></h4>
                     <h5 class="meta">Brainbench Inc.</h5>
                 <div class="time">2020</div>
                 </div><!--//item-->
+
                 <div class="item">
-                    <h4 class="degree"><a href="https://www.brainbench.com/xml/bb/transcript/public/viewtranscript.xml?pid=6726887" target="_blank">MS SQL Server 2014 Administration</a></h4>
-                    <h5 class="meta">Brainbench Inc.</h5>
-                <div class="time">2020</div>
+                    <h4 class="degree"><a href="https://www.specialist.ru/profile/publiccert/2254" target="_blank">Windows 7 & PHP Programming</a></h4>
+                    <h5 class="meta">Training Center at BMST</h5>
+                    <div class="time">2018-2022</div>
                 </div><!--//item-->
+
+                <!--
+               <div class="item">
+                   <h4 class="degree"><a href="https://www.brainbench.com/xml/bb/transcript/public/viewtranscript.xml?pid=6726887" target="_blank">MS SQL Server 2014 Administration</a></h4>
+                   <h5 class="meta">Brainbench Inc.</h5>
+               <div class="time">2020</div>
+               </div><!--//item-->
+
                 <div class="item">
                     <h4 class="degree"><a href="https://intuit.ru/verifydiplomas/101185965" target="_blank">Java: Basics</a></h4>
                     <h5 class="meta">The National Open University "INTUIT"</h5>
