--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
                 <div class="item">
                     <h4 class="degree"><a href="https://www.specialist.ru/profile/publiccert/2254" target="_blank">Windows 7 & PHP Programming</a></h4>
-                    <h5 class="meta">Training Center at BMST</h5>
+                    <h5 class="meta">Training Center at BMSTU</h5>
                     <div class="time">2018-2022</div>
                 </div><!--//item-->
 
