--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                             <h3 class="job-title">Quality Assurance (QA) Engineer</h3>
                             <div class="time">2022</div>
                         </div><!--//upper-row-->
-                        <div class="company"><a href="https://new-step.study" target="_blank">National Research Tomsk State University & Training Center "New Step" Ltd., Skolkovo</a></div>
+                        <div class="company"><a href="https://tgu-dpo.ru/" target="_blank">National Research Tomsk State University & Training Center "New Step" Ltd., Skolkovo</a></div>
                     </div><!--//meta-->
                     <div class="details">
                         <!-- <div class="container"> -->
