--- a/travel/index_travel.html
+++ b/travel/index_travel.html
@@ -460,7 +460,7 @@
                         <div class="col-md-6 col-sm-6">
                             <!-- Skill 02 -->
                             <div class="skill">
-                                <h4>Photoshop/Lightroom</h4>
+                                <h4>PHP Programming</h4>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="71" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
                                         <span>71%</span>
@@ -482,7 +482,7 @@
                         <div class="col-md-6 col-sm-6">
                             <!-- Skill 04 -->
                             <div class="skill">
-                                <h4>Digital Social</h4>
+                                <h4>Quality Assurance</h4>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
                                         <span>90%</span>
