--- a/index.html
+++ b/index.html
@@ -237,6 +237,12 @@
                     <div class="time">2018-2022</div>
                 </div><!--//item-->
 
+                <div class="item">
+                    <h4 class="degree"><a href="https://gb.ru/users/3941152?tab=skills" target="_blank">PHP Programming</a></h4>
+                    <h5 class="meta">GeekBrains</h5>
+                    <div class="time">2022</div>
+                </div><!--//item-->
+
                 <!--
                <div class="item">
                    <h4 class="degree"><a href="https://www.brainbench.com/xml/bb/transcript/public/viewtranscript.xml?pid=6726887" target="_blank">MS SQL Server 2014 Administration</a></h4>
