--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
                 <div class="item">
                     <h4 class="degree"><a href="https://gb.ru/users/3941152?tab=skills" target="_blank">PHP Programming</a></h4>
-                    <h5 class="meta">GeekBrains</h5>
+                    <h5 class="meta">GeekBrains Ltd.</h5>
                     <div class="time">2022</div>
                 </div><!--//item-->
 
