--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                 </div><!--//item-->
 
                 <div class="item">
-                    <h4 class="degree"><a href="https://gb.ru/users/3941152?tab=skills" target="_blank">PHP Programming</a></h4>
+                    <h4 class="degree"><a href="https://gb.ru/users/3941152?tab=skills" target="_blank">QA & PHP</a></h4>
                     <h5 class="meta">GeekBrains Ltd.</h5>
                     <div class="time">2022</div>
                 </div><!--//item-->
