--- a/index.html
+++ b/index.html
@@ -106,6 +106,24 @@
     </script>
      <!-- // Скрипт увеличения изображения по клику -->
 
+
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript" >
+        (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+            m[i].l=1*new Date();
+            for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+            k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+        ym(91171440, "init", {
+            clickmap:true,
+            trackLinks:true,
+            accurateTrackBounce:true
+        });
+    </script>
+    <noscript><div><img src="https://mc.yandex.ru/watch/91171440" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <!-- /Yandex.Metrika counter -->
+
 </head> 
 
 <body>
@@ -248,7 +266,7 @@
                    <h4 class="degree"><a href="https://www.brainbench.com/xml/bb/transcript/public/viewtranscript.xml?pid=6726887" target="_blank">MS SQL Server 2014 Administration</a></h4>
                    <h5 class="meta">Brainbench Inc.</h5>
                <div class="time">2020</div>
-               </div><!--//item-->
+               </div>//item-->
 
                 <div class="item">
                     <h4 class="degree"><a href="https://intuit.ru/verifydiplomas/101185965" target="_blank">Java: Basics</a></h4>
