--- a/index.html
+++ b/index.html
@@ -552,10 +552,15 @@
                 <div class="item">
                     <span class="project-title"><a href="https://github.com/leonid-alt/git_QR_Reader/" target="_blank">QR_Reader</a></span> - 
                     <span class="project-tagline">iOS application for reading QR codes with built-in camera for Apple devices and subsequent decoding.</span>
-                 </div><!--//item-->  
+                 </div><!--//item-->
+                
+                  <div class="item">
+                      <span class="project-title"><a href="https://github.com/leonid-alt/Bar-and-QR-Code/" target="_blank">Bar-and-QR-Code</a></span> -
+                      <span class="project-tagline">iOS application for offline generation of Bar or QR code.</span>
+                  </div><!--//item-->
 
                 <div class="item">
-                    <span class="project-title"><a href="https://github.com/leonid-alt/CarBook/" target="_blank">CarBook</a></span> - 
+                    <span class="project-title"><a href="https://github.com/leonid-alt/CarBook/" target="_blank">CarBook</a></span> -
                     <span class="project-tagline">A computer vision application project for a Cubieboard4 single-board computer with the Lubuntu operating system in C, using the OpenCV v.2.4.9 library. </span>
                 </div><!--//item-->
                 
