--- a/travel/index_travel.html
+++ b/travel/index_travel.html
@@ -389,7 +389,7 @@
                                 <img src="..//project/img/team-4.jpg" class="img-responsive" alt="">
                                 <div class="team-member-overlay">
                                     <div class="team-member-info text-center">
-                                        <h4>Friez Honig/h4>
+                                        <h4>Friez Honig</h4>
                                         <p>
                                             Art Director
                                         </p>
