--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Responsive HTML5 Resume for Frontend Developer">
 
-    <link rel="shortcut icon" href="favicon.ico">  
+    <!--<link rel="shortcut icon" href="favicon.ico"> -->
+    <link rel="icon" href="https://leonid-alt.github.io/favicon.ico" type="image/svg+xml">
+
+
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,400italic,300italic,300,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'> 
     <!-- <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel='stylesheet' type='text/css'> -->
     
@@ -247,7 +250,8 @@
                     <h4 class="degree"><a href="https://www.brainbench.com/xml/bb/transcript/public/viewtranscript.xml?pid=6726887" target="_blank">Apple iOS 7 Development</a></h4>
                     <h5 class="meta">Brainbench Inc.</h5>
                 <div class="time">2020</div>
-                </div><!--//item-->
+                </div>-->
+                <!--//item-->
 
                 <div class="item">
                     <h4 class="degree"><a href="https://www.specialist.ru/profile/publiccert/2257" target="_blank">PHP Programming</a></h4>
