--- a/addition/index_addition.html
+++ b/addition/index_addition.html
@@ -25,10 +25,10 @@
      <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
 
-     <link rel="shortcut icon" type="image/x-icon" href="img/favicon/favicon.ico">
+    <!--link rel="shortcut icon" type="image/x-icon" href="img/favicon/favicon.ico"> -->
+    <link rel="shortcut icon" href="favicon.ico">
 
-
-    <!-- Стили Bootstrap -->
+   <!-- Стили Bootstrap -->
     <!-- <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"> -->
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
