--- a/food/index_food.html
+++ b/food/index_food.html
@@ -13,6 +13,8 @@
     <link href="css/style.css" rel="stylesheet">
     
     <link href="css/responsive.css" rel="stylesheet">
+
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 
 <body>
