--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Responsive HTML5 Resume for Frontend Developer">
 
-    <!--<link rel="shortcut icon" href="favicon.ico"> -->
-    <link rel="icon" href="https://leonid-alt.github.io/favicon.ico" type="image/svg+xml">
+    <link rel="shortcut icon" href="favicon.ico">
+    <!-- <link rel="icon" href="https://leonid-alt.github.io/favicon.ico" type="image/x-icon"> -->
 
 
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,400italic,300italic,300,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'> 
