--- a/travel/index_travel.html
+++ b/travel/index_travel.html
@@ -55,7 +55,9 @@
     <!-- style file -->
     
     <link rel="stylesheet" href="style.css">
-     <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="responsive.css">
+
+    <link rel="shortcut icon" href="favicon.ico">
     
 </head>
 <body>
