--- a/addition/index_addition.html
+++ b/addition/index_addition.html
@@ -27,7 +27,7 @@
 
     <!-- link rel="shortcut icon" type="image/x-icon" href="img/favicon/favicon.ico"> -->
     <!-- <link rel="icon" href="https://leonid-alt.github.io/favicon.ico" type="image/x-icon"> -->
-    <link rel="shortcut icon" href="favicon.ico">
+    <!-- <link rel="shortcut icon" href="favicon.ico"> -->
 
     <!-- Стили Bootstrap -->
     <!-- <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"> -->
