--- a/addition/index_addition.html
+++ b/addition/index_addition.html
@@ -25,8 +25,8 @@
      <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
 
-    <!-- link rel="shortcut icon" type="image/x-icon" href="img/favicon/favicon.ico"> -->
-    <!-- <link rel="icon" href="https://leonid-alt.github.io/favicon.ico" type="image/x-icon"> -->
+    <!--<link rel="shortcut icon" type="image/x-icon" href="favicon.ico"> -->
+    <link rel="icon" href="https://leonid-alt.github.io/favicon.ico" type="image/x-icon">
     <!-- <link rel="shortcut icon" href="favicon.ico"> -->
 
     <!-- Стили Bootstrap -->
