--- a/addition/3D_modeling.html
+++ b/addition/3D_modeling.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Проектирование: - Визуализация модели двухэтажного коттеджа по имеющимся планам первого и второго этажей"/>
     <title>3D моделирование</title>
 
 
