--- a/addition/app_development.html
+++ b/addition/app_development.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Учеба и проектирование: - Приложения iOS; - 3d моделирование в 3ds MAX; - обучение в Intuit и Brainbench"/>
     <title>Apple iOS 7 Development</title>
  
 
@@ -51,9 +52,10 @@
     });
     </script>
 
-
-
 </head>
+
+
+
 <body>
 
     <div class="scrollup">
