--- a/addition/cottage.html
+++ b/addition/cottage.html
@@ -19,6 +19,7 @@
 <html lang="ru">
 <head>
     <META http-equiv=Content-Type content="text/html; charset=utf-8">
+    <meta name="description" content="Проектирование: - 3d моделирование в 3ds MAX"/>
     <title>3D моделирование</title>
 
     <style>
