--- a/addition/certificats.html
+++ b/addition/certificats.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Учеба: - обучение в Intuit и Brainbench"/>
     <title>IT - Сертификаты </title>
     <!-- Масштабирование картинок под курсором -->
     <style>
