--- a/addition/certificats.html
+++ b/addition/certificats.html
@@ -83,7 +83,7 @@
                 <div class="portfolio-single-page-item">
                     <div class="portfolio-single-page-item__img">
                          <!-- Ссылка при наведении курсора  -->
-                        <a href="https://www.intuit.ru/verifydiplomas/00098968" target="_blank"/a>
+                        <a href="https://www.intuit.ru/verifydiplomas/00098968" target="_blank"></a>
                         <img src="img/portfolio/big/INTUIT_-2-452451-ORF.jpg"
                         alt="Основы операционных систем" class="scale">
                     </div>
@@ -96,7 +96,7 @@
                 <div class="portfolio-single-page-item">
                     <div class="portfolio-single-page-item__img">
                         <!-- Ссылка при наведении курсора  -->
-                        <a href="https://intuit.ru/verifydiplomas/101177036" target="_blank"/a>
+                        <a href="https://intuit.ru/verifydiplomas/101177036" target="_blank"></a>
                         <img src="img/portfolio/big/Nekommerch-2-1177036-ORF.jpg"
                         alt="Разработка мультимедийных приложений с использованием библиотек OpenCV и IPP" class="scale">
                     </div>
@@ -109,7 +109,7 @@
                 <div class="portfolio-single-page-item">
                     <div class="portfolio-single-page-item__img">
                         <!-- Ссылка при наведении курсора  -->
-                        <a href="http://www.brainbench.com/transcript.jsp?pid=6726887" target="_blank"/a>
+                        <a href="http://www.brainbench.com/transcript.jsp?pid=6726887" target="_blank"></a>
                         <img  src="img/portfolio/big/downloadCertificate.jpg"
                         alt="Apple iOS 7 Development" class="scale" >
                     </div>
