--- a/addition/app_development.html
+++ b/addition/app_development.html
@@ -106,7 +106,7 @@
             <div class="col-4">
                 <div class="portfolio-single-page-item">
                     <div class="portfolio-single-page-item__img">
-                    <a href="https://github.com/leonid-alt/git_QR_Reader" target="_blank"/a>
+                    <a href="https://github.com/leonid-alt/git_QR_Reader" target="_blank"></a>
                     <img  src="img/portfolio/big/EWYG1831_1.jpg"
                         alt=" Считыватель QR кода"></img>
                     </div>
@@ -171,7 +171,7 @@
             <div class="col-4">
                 <div class="portfolio-single-page-item">
                     <div class="portfolio-single-page-item__img">
-                    <a href="https://github.com/leonid-alt/Bar-and-QR-Code" target="_blank"/a>
+                    <a href="https://github.com/leonid-alt/Bar-and-QR-Code" target="_blank"></a>
                     <img src="img/portfolio/big/ILAC7254_2.jpg"
                         alt="Приложение генератора QR кода "></img>
                     </div>
