--- a/wp/index_wp_1.html
+++ b/wp/index_wp_1.html
@@ -195,8 +195,8 @@
 
           <li class="nav-item">
               <a class="nav-link" href="wp/index_wp.html" target="_blank">
-                  <i class="fa fa-wordpress" aria-hidden="true"></i>
-                  WordPress</a>
+                  <i class="fa fa-cutlery" aria-hidden="true"></i>
+                  WP</a>
           </li>
 
       </ul>
