--- a/index.html
+++ b/index.html
@@ -213,12 +213,12 @@
                 <h1 class="name">Leonid N.<br>Stepanov</h1>
                 <h3 class="tagline">Frontend Developer</h3>
             </div>
-            <!--//profile-container-->
+            //profile-container-->
             
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
                     <li class="email"><i class="fa fa-envelope"></i><a href="mailto: stepanow@bk.ru">stepanow@bk.ru</a></li>
-                    <li class="phone"><i class="fa fa-phone"></i><a href="tel:+7(9__) ___ ____">+7(9__) ___ ____</a></li>
+                   <!-- <li class="phone"><i class="fa fa-phone"></i><a href="tel:+7(9__) ___ ____">+7(9__) ___ ____</a></li> -->
                     <li class="website"><i class="fa fa-globe"></i><a href="https://leonid-alt.github.io" target="_blank">leonid-stepanov.site</a></li>
                     <!-- <li class="linkedin"><i class="fa fa-linkedin"></i><a href="#" target="_blank">linkedin.com/in/leostep</a></li> -->
                     <li class="github"><i class="fa fa-github"></i><a href="https://github.com/leonid-alt" target="_blank">github.com/leonid-alt</a></li> 
