--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 <h1 class="name">Leonid N.<br>Stepanov</h1>
                 <h3 class="tagline">Frontend Developer</h3>
             </div>
-            //profile-container-->
+            <!-- //profile-container -->
             
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
