--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Responsive HTML5 Resume for Frontend Developer">
+    <meta name="description" content="esign of radio electronic systems, information systems programming, 
+	project management. Frontend Developer. Development of the project Internet store "Good Luck Shop" 
+	based on ASP.NET MVC5 Visual C # technology - see the "Projects" - Project Web Store "Good Luck Shop".
+	A computer vision application project for a Cubieboard4 single-board computer with the Lubuntu 
+	operating system in C, using the OpenCV v.2.4.9 library. 
+	iOS application for offline generation of Bar or QR code" />
 
     <link rel="shortcut icon" href="favicon.ico">
     <!-- <link rel="icon" href="https://leonid-alt.github.io/favicon.ico" type="image/x-icon"> -->
