--- a/food/index_food.html
+++ b/food/index_food.html
@@ -15,7 +15,7 @@
     
     <link href="css/responsive.css" rel="stylesheet">
 
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="icon" href="https://leonid-alt.github.io/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
