--- a/travel/index_travel.html
+++ b/travel/index_travel.html
@@ -4,7 +4,7 @@
     <!-- <meta charset="UTF-8"> -->
     <meta charset="UTF-8" name="description" content="Путешествие в районе турбазы Altay Sens"/>
     <title>Altay gifts</title>
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="icon" href="https://leonid-alt.github.io/favicon.ico" type="image/x-icon">
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700i" rel="stylesheet">
     
