--- a/wp/index_wp.html
+++ b/wp/index_wp.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru-RU">
+<html style="margin-top: -30px;" lang="ru-RU">
     <head>
     <meta charset="UTF-8">
     <title>Сайт-визитка на WordPress</title>
