--- a/index.html
+++ b/index.html
@@ -9,12 +9,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Responsive HTML5 Resume for Frontend Developer">
-    <meta name="description" content="esign of radio electronic systems, information systems programming, 
-	project management. Frontend Developer. Development of the project Internet store "Good Luck Shop" 
-	based on ASP.NET MVC5 Visual C # technology - see the "Projects" - Project Web Store "Good Luck Shop".
-	A computer vision application project for a Cubieboard4 single-board computer with the Lubuntu 
-	operating system in C, using the OpenCV v.2.4.9 library. 
-	iOS application for offline generation of Bar or QR code" />
 
     <link rel="shortcut icon" href="favicon.ico">
     <!-- <link rel="icon" href="https://leonid-alt.github.io/favicon.ico" type="image/x-icon"> -->
@@ -219,12 +213,12 @@
                 <h1 class="name">Leonid N.<br>Stepanov</h1>
                 <h3 class="tagline">Frontend Developer</h3>
             </div>
-            <!-- //profile-container -->
+            <!--//profile-container-->
             
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
                     <li class="email"><i class="fa fa-envelope"></i><a href="mailto: stepanow@bk.ru">stepanow@bk.ru</a></li>
-                   <!-- <li class="phone"><i class="fa fa-phone"></i><a href="tel:+7(9__) ___ ____">+7(9__) ___ ____</a></li> -->
+                    <li class="phone"><i class="fa fa-phone"></i><a href="tel:+7(961) 999 5108">+7(961) 999 5108</a></li>
                     <li class="website"><i class="fa fa-globe"></i><a href="https://leonid-alt.github.io" target="_blank">leonid-stepanov.site</a></li>
                     <!-- <li class="linkedin"><i class="fa fa-linkedin"></i><a href="#" target="_blank">linkedin.com/in/leostep</a></li> -->
                     <li class="github"><i class="fa fa-github"></i><a href="https://github.com/leonid-alt" target="_blank">github.com/leonid-alt</a></li> 
@@ -309,6 +303,9 @@
 
                     <li>Skiing</li>
                     <video muted="muted" controls="controls" src="shares/video/OVBS6578.mp4">
+                    </video><br><br>
+
+                    <video muted="muted" controls="controls" src="shares/video/IMG_8828.mp4">
                     </video><br><br>
 
                     <li>Fishing</li>
@@ -653,7 +650,19 @@
     <footer class="footer">
         <div class="text-center">
                 <!--/*   */-->
-                <small class="copyright">Copyright <i class="fa fa-copyright" aria-hidden="true"></i> Leonid N. Stepanov 2023</small>
+                <small class="copyright">Copyright <i class="fa fa-copyright" aria-hidden="true"></i> | Leonid N. Stepanov 2023 | </small>
+            <script language="javascript" type="text/javascript">
+                var d = new Date();
+
+                var day = new Array("Воскресенье", "Понедельник", "Вторник",
+                    "Среда", "Четверг", "Пятница", "Суббота");
+
+                var month = new Array("января", "февраля", "марта", "апреля", "мая", "июня",
+                    "июля", "августа", "сентября", "октября", "ноября", "декабря");
+
+                document.write(day[d.getDay()] + " " + d.getDate() + " " + month[d.getMonth()]
+                    + " " + d.getFullYear() + " г.");
+            </script>
         </div><!--//container-->
     </footer><!--//footer-->
 	
