--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
     <footer class="footer">
         <div class="text-center">
                 <!--/*   */-->
-                <small class="copyright">Copyright <i class="fa fa-copyright" aria-hidden="true"></i> | Leonid N. Stepanov 2023 | </small>
+                <small class="copyright">Copyright <i class="fa fa-copyright" aria-hidden="true"></i> | Leonid N. Stepanov | </small>
             <script language="javascript" type="text/javascript">
                 var d = new Date();
 
