--- a/index.html
+++ b/index.html
@@ -505,10 +505,15 @@
             <section class="section projects-section">
                 <h2 class="section-title"><i class="fa fa-archive"></i>Projects</h2>
 
-
-
                 <div class="details">
-                    <h5>Project Web Store "Good Luck Shop" (ASP.NET MVC5 Visual C#):</h5>
+                    <div class="item">
+                        <h5>
+                        <span class="project-title">
+                            <a href="http://astra.somee.com/" target="_blank">Astra Port</a></span> -
+                        <span class="project-tagline">Online project Web Store "Astra Port" (ASP.NET MVC5 Visual C#)</span>
+                        </h5>
+                    </div><!--//item-->
+                    <h5>Offline project Web Store "Good Luck Shop" (ASP.NET MVC5 Visual C#):</h5>
 
                 <br>
                 <div class="image__wrapper">
