--- a/index.html
+++ b/index.html
@@ -506,23 +506,16 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Online project Web Store "Astra Port" (ASP.NET MVC5 Visual C#)</h3>
+                            <div class="company">
+                                <h5>
+                                    <a href="http://astra.somee.com/" target="_blank">Online project Web Store "Astra Port" (ASP.NET MVC5 Visual C#)</a>
+                                </h5>
+                                <div class="time">2023</div>
+                            </div>
                             <div class="time">2023</div>
+                            <br><br>
                         </div><!--//upper-row-->
-                        <div class="company"><h5><a href="http://astra.somee.com/" target="_blank">Astra Port</a></h5></div>
                     </div><!--//meta-->
-                    <div class="details">
-                        <!-- <div class="container"> -->
-                        <!--
-                       <div class="image__wrapper">
-                           <img src="shares/images/DIPLOM_TPO_1200_849.jpg" class="minimized" alt="diplom">
-                       </div>
-                       -->
-                       <!-- </div> -->
-                        Development of online project Web Store "Astra Port".<br><br><br>
-                    </div><!--//details-->
-                </div><!--//item-->
-
 
 
                 <div class="meta">
