--- a/index.html
+++ b/index.html
@@ -4,6 +4,47 @@
     <title>Leonid N. Stepanov - Developer Resume</title>
     <!-- Meta -->
 
+    <!-- стили скрипта для прелоадера в виде анимированной svg иконки  -->
+    <style>
+        body {
+            margin: 0;
+        }
+        .preloader {
+            position: fixed;
+            left: 0;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            overflow: hidden;
+            /* фоновый цвет */
+            background: #e0e0e0;
+            z-index: 1001;
+        }
+        .preloader__image {
+            position: relative;
+            top: 50%;
+            left: 50%;
+            width: 70px;
+            height: 70px;
+            margin-top: -35px;
+            margin-left: -35px;
+            text-align: center;
+            animation: preloader-rotate 2s infinite linear;
+        }
+        @keyframes preloader-rotate {
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+        .loaded_hiding .preloader {
+            transition: 0.3s opacity;
+            opacity: 0;
+        }
+        .loaded .preloader {
+            display: none;
+        }
+    </style>
+    <!-- // стили скрипта для прелоадера в виде анимированной svg иконки  -->
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -121,9 +162,32 @@
     <noscript><div><img src="https://mc.yandex.ru/watch/92474516" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
     <!-- /Yandex.Metrika counter -->
 
+    <!--  скрипт прелоадера в виде анимированной svg иконки -->
+    <script>
+        window.onload = function () {
+            document.body.classList.add('loaded_hiding');
+            window.setTimeout(function () {
+                document.body.classList.add('loaded');
+                document.body.classList.remove('loaded_hiding');
+            }, 500);
+        }
+    </script>
+    <!--  // скрипт прелоадера в виде анимированной svg иконки -->
+
 </head> 
 
 <body>
+<!--  Прелоадер в виде анимированной svg иконки -->
+<div class="preloader">
+    <svg class="preloader__image" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+        <path fill="currentColor"
+              d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z">
+        </path>
+    </svg>
+</div>
+<!-- // Прелоадер в виде анимированной svg иконки -->
+
+
     <!--   навигационного меню Navbar Bootstrap 3 -->
     <div class="wrapper_menu">
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
