--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
                     <span class="project-title"><a href="https://github.com/leonid-alt/gitApp_Intuit/" target="_blank">App_Intuit</a></span> - 
                     <span class="project-tagline">An Objective-C iOS app tutorial project.</span>
                 </div><!--//item-->
-
+                </div>
             </section><!--//section-->
             
 
