--- a/travel/index_travel.html
+++ b/travel/index_travel.html
@@ -9,7 +9,7 @@
     <!-- стили скрипта для прелоадера в виде анимированной svg иконки  -->
     <style>
         body {
-            margin: 0;
+            margin: 50%;
         }
         .preloader {
             position: fixed;
